# hospitality-backend

./: .gitignore  Cargo.toml
common/: Cargo.toml
documents/: Cargo.toml
documents/src/: main.rs
documents/src/enums/: error.rs
documents/src/middleware/: request_middleware.rs
documents/src/models/: mod.rs  payloads.rs  state.rs
documents/src/routes/: generate_routes.rs  mod.rs
documents/src/templates/: contact-qr-code.typ  inventory-report.typ  purchase-bill.typ  qr-codes.typ
documents/src/utils/: consts.rs  date_time_utils.rs  mod.rs
server/: .dockerignore  Cargo.toml  Dockerfile  Welcome file.md  docker-compose-dev.yaml  docker-compose-local.yaml  loki-config.yaml
server/cerbos/: cerbos.yaml
server/cerbos/policies/: resource_created_at.yaml  resource_deleted_at.yaml  resource_updated_at.yaml
server/cerbos/policies/brands/: resource_company_id.yaml  resource_created_at.yaml  resource_deleted_at.yaml  resource_id.yaml  resource_manufacturer_id.yaml  resource_owner_id.yaml  resource_parent_id.yaml  resource_stores_actions.yaml  resource_stores_model.yaml  resource_title.yaml
server/cerbos/policies/companies/: resource_address.yaml  resource_cin.yaml  resource_companies_actions.yaml  resource_companies_model.yaml  resource_date_of_founding.yaml  resource_email.yaml  resource_image_id.yaml  resource_owner_id.yaml  resource_phone.yaml  resource_title.yaml
server/cerbos/policies/constants/: resource_constants_roles.yaml
server/cerbos/policies/contacts/: resource_bounding_box.yaml  resource_contact_type.yaml  resource_contacts_model.yaml  resource_id.yaml  resource_is_primary.yaml  resource_is_public.yaml  resource_iso3.yaml  resource_latitude.yaml  resource_longitude.yaml  resource_parent_id.yaml  resource_place_id.yaml  resource_prefix.yaml  resource_title.yaml  resource_value.yaml
server/cerbos/policies/files/: resource_category.yaml  resource_company_id.yaml  resource_created_at.yaml  resource_deleted_at.yaml  resource_files_actions.yaml  resource_files_model.yaml  resource_id.yaml  resource_location_id.yaml  resource_owner_id.yaml  resource_title.yaml  resource_type.yaml
server/cerbos/policies/locations/: resource_company_id.yaml  resource_id.yaml  resource_image_id.yaml  resource_locations_actions.yaml  resource_locations_model.yaml  resource_title.yaml
server/cerbos/policies/locations_available_brands/: resource_actions.yaml  resource_location_id.yaml  resource_manufacturer_id.yaml  resource_model.yaml
server/cerbos/policies/locations_available_manufacturers/: resource_manufacturer_id.yaml  resource_model.yaml
server/cerbos/policies/locations_available_products/: resource_actions.yaml  resource_location_id.yaml  resource_model.yaml  resource_product_id.yaml
server/cerbos/policies/locations_available_products copy/: resource_actions.yaml  resource_location_id.yaml
server/db/: schema.sql
server/db/migrations/: 20250123194951_add_users.sql  20250123194952_add_companies.sql  20250123194953_add_users_company_id.sql  20250124103649_add_locations.sql  20250125102754_add_contacts_tables.sql  20250128074948_add_files.sql  20250128075220_add_image_column_for_users.sql  20250131195050_add_roles.sql  20250133102012_add_locations_users.sql  20250204095747_add_product_categories.sql  20250205074325_add_products.sql  20250205075939_add_locations_products.sql  20250302084427_add_user_to_location_trigger.sql  20250327123834_make_barcodes_unique.sql  20250410090924_add_location_title_constraint.sql  20250410112302_add_image_id_column_for_locations.sql  20250412173117_add_iso3_to_contacts.sql  20250413080323_add_countries_table.sql  20250413104537_add_expiration_date_for_location_products.sql  20250421134602_add_purcheses_table.sql  20250422180927_add_manufacturers.sql  20250423193521_add_stores.sql  20250423194714_add_product_aliases.sql  20250424055047_add_suppliers_and_stores_contacts.sql  20250424114214_add_packing_date_for_products.sql  20250424134602_add_purchases_table.sql  20250425105010_add_purchase_item_id_to_loc_products.sql  20250426084153_add_additional_columns_to_manufacturers.sql  20250426084231_add_manufacturer_contacts.sql  20250426093226_add_manufacturer_id_to_products.sql  20250426094232_add_brands.sql  20250426115053_add_product_shape.sql  20250426115232_add_locations_products_packing_date.sql  20250426115240_add_products_dimensions.sql  20250428111506_add_unique_constraint_to_supplier_and_company_id.sql  20250428112217_add_available_suppliers.sql  20250428113343_add_available_manufacturers.sql  20250428113347_add_available_brands.sql  20250503094130_create_product_views.sql
server/src/: main.rs
server/src/enums/: actions.rs  contacts.rs  errors.rs  files.rs  mod.rs  models.rs  products.rs  purchases.rs  requests.rs  response_messages.rs  roles.rs
server/src/middlware/: crud_middleware.rs  mod.rs  search_middleware.rs
server/src/models/: auth.rs  brands.rs  cerbos.rs  contacts.rs  locations.rs  locations_available_brands.rs  locations_available_manufacturers.rs  locations_available_products.rs  locations_products.rs  locations_users.rs  manufacturers.rs  mod.rs  permissions.rs  products.rs  products_categories.rs  purchases.rs  requests.rs  response.rs  roles.rs  search.rs  state.rs  suppliers.rs  url_responses.rs  users.rs
server/src/routes/: auth_routes.rs  brand_routes.rs  contacts_routes.rs  file_routes.rs  locations_available_brands_routes.rs  locations_available_manufacturers_routes.rs  locations_available_products_routes.rs  locations_products_routes.rs  locations_routes.rs  locations_users_routes.rs  manufacturers_routes.rs  mod.rs  product_routes.rs  products_categories_routes.rs  purchase_items_routes.rs  purchases_routes.rs  resource_routes.rs  roles_routes.rs  search_routes.rs  statistics_routes.rs  stores_routes.rs  suppliers_routes.rs  url_routes.rs  users_routes.rs
server/src/traits/: db_traits.rs  enum_traits.rs  mod.rs  model_traits.rs
server/src/utils/: auth_utils.rs  consts.rs  db_utils.rs  file_utils.rs  mod.rs  request_utils.rs  serde_utils.rs  server_utils.rs  storage_utils.rs  transform_utils.rs
(+132 files in other folders)
