[workspace]
members = ["common", "server", "documents"]
resolver = "3"
# Optional: Define shared dependencies for all workspace members
[workspace.dependencies]
axum = { version = "0.8.1", features = [
    "form",
    "macros",
    "multipart",
    "query",
] }
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "1.82.0"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
dotenv = "0.15.0"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-loki = "0.2.6"
tracing-subscriber = { version = "0.3.19", features = [
    "serde",
    "serde_json",
    "json",
    "tracing",
    "chrono",
    "env-filter",
    "std",
] }
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = { version = "0.10.3", features = ["serde"] }
