[package]
name = "hospitality-documents"
version = "0.1.0"
edition = "2024"

[dependencies]
tera = "1.20.0"
axum = { workspace = true }
anyhow = { workspace = true }
aws-sdk-s3 = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-loki = { workspace = true }
tracing-subscriber = { workspace = true }
