[package]
name = "hospitality-documents"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
axum-extra = { version = "0.10.0" }
axum = { workspace = true }
anyhow = { workspace = true }
aws-sdk-s3 = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-loki = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.19.1"
chrono = { workspace = true }
chrono-tz = { workspace = true }
