[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.29"
anyhow = "1.0.95"
argon2 = "0.5.3"
aws-sdk-s3 = "1.82.0"
axum = { version = "0.8.1", features = [
    "form",
    "macros",
    "multipart",
    "query",
] }
axum-extra = { version = "0.10.0", features = [
    "cookie",
    "cookie-signed",
    "cookie-private",
] }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = { version = "0.10.3", features = ["serde"] }
convert_case = "0.8.0"
deadpool-postgres = { version = "0.14.1", features = ["serde", "rt_tokio_1"] }
deadpool-redis = { version = "0.20.0", features = ["serde", "rt_tokio_1"] }
dotenv = "0.15.0"
garde = { version = "0.22.0", features = [
    "derive",
    "email",
    "serde",
    "regex",
    "phone-number",
    "pattern",
    "url",
] }
image = "0.25.5"
imageproc = "0.25.0"
is_empty = "0.3.0"
qrcode = "0.14.1"
rand = "0.9.0"
rand_core = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
rust_decimal = { version = "1.36.0", features = [
    "db-tokio-postgres",
    "serde-float",
    "serde-with-float",
] }
rustls = "0.23.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sha2 = "0.10.8"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
thiserror = "2.0.11"
time = "0.3.39"
tokio = { version = "1.2.0", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = [
    "with-uuid-1",
    "with-serde_json-1",
    "with-chrono-0_4",
    "array-impls",
] }
tokio-postgres-rustls = "0.13.0"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-loki = "0.2.6"
tracing-subscriber = { version = "0.3.19", features = [
    "serde",
    "serde_json",
    "json",
    "tracing",
    "chrono",
    "env-filter",
    "std",
] }
